# dishcovery

./: .env  Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  tailwind.config.ts
app/categories/[id]/: page.tsx
app/recipes/[id]/: page.tsx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 21818039370a_.py
backend/src/: config.py  db.py  dependencies.py  main.py  models.py
backend/src/api/: auth.py  categories.py  recipes.py
backend/src/services/: repository.py  supabase.py
components/: input.tsx  signin.tsx
frontend/: .dockerignore  package.json
frontend/app/: layout.tsx
frontend/app/categories/: page.tsx
frontend/app/recipes/: page.tsx
frontend/components/: dock.tsx  header.tsx  recipes.tsx
frontend/lib/: session.ts
lib/: actions.ts  client.ts  hooks.ts  models.ts  providers.tsx  redis.ts  store.ts
